@@ -17,8 +17,8 @@ import java.util.ArrayDeque;
 
 public class ListAnyOrderTest extends TestBase {
 
-    @Test 
-    public void shouldMatchSameElementsDifferentOrderOfLists(){
+    @Test
+    public void shouldMatchSameElementsDifferentOrderOfLists() {
         List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
         List<Integer> list2 = new ArrayList<>(Arrays.asList(2, 1));
         ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
@@ -26,8 +26,8 @@ public class ListAnyOrderTest extends TestBase {
         assertTrue(listMatcher.matches(list2));
     }
 
-    @Test 
-    public void shouldReturnDifferentLengthLists(){
+    @Test
+    public void shouldReturnDifferentLengthLists() {
         List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
         List<Integer> list2 = new ArrayList<>(Arrays.asList(1));
         ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
@@ -36,7 +36,7 @@ public class ListAnyOrderTest extends TestBase {
     }
 
     @Test
-    public void shouldReturnDifferentElementsInLists(){
+    public void shouldReturnDifferentElementsInLists() {
 
         List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
         List<Integer> list2 = new ArrayList<>(Arrays.asList(3, 4));
@@ -44,45 +44,36 @@ public class ListAnyOrderTest extends TestBase {
 
         assertFalse(listMatcher.matches(list2));
     }
-    
+
     @Test
-    public void shouldReturnSameElementsButDifferentListTypes(){
+    public void shouldReturnSameElementsButDifferentListTypes() {
         List<Integer> list = new ArrayList<>(Arrays.asList(1, 2));
         Deque<Integer> anotherTypeOfList = new ArrayDeque<>(2);
         anotherTypeOfList.addFirst(1);
         anotherTypeOfList.addLast(2);
         ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list);
-        
+
         assertTrue(listMatcher.matches(anotherTypeOfList));
     }
 
     @Test
-    public void shouldReturnDifferentElementsButDifferentListTypes(){
+    public void shouldReturnDifferentElementsButDifferentListTypes() {
         List<Integer> list = new ArrayList<>(Arrays.asList(1, 2));
         Deque<Integer> anotherTypeOfList = new ArrayDeque<>(2);
         anotherTypeOfList.addFirst(3);
         anotherTypeOfList.addLast(2);
         ListAnyOrder<Integer> listAnyOrderObject = new ListAnyOrder<>(list);
-        
+
         assertFalse(listAnyOrderObject.matches(anotherTypeOfList));
     }
-    
+
     @Test
-    public void shouldDeepMatchSameElementsDifferentClassesDifferentOrder(){
-        List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
-        List<Short> list2 = new ArrayList<>(List.of((short) 2, (short) 1));
+    public void shouldMatchWhenNull() {
+        List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2, 2, 3));
+        List<Integer> list2 = null;
         ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
 
-        assertTrue(listMatcher.deepMatches(list2));
-    }
-    
-    @Test
-    public void shouldDeepMatchDifferentElementsDifferentClasses(){
-        List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
-        List<Short> list2 = new ArrayList<>(List.of((short) 2, (short) 3));
-        ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
-        
-        assertFalse(listMatcher.deepMatches(list2));
+        assertFalse(listMatcher.matches(list2));
     }
 
     @Test
@@ -95,6 +86,24 @@ public class ListAnyOrderTest extends TestBase {
     }
 
     @Test
+    public void shouldDeepMatchSameElementsDifferentClassesDifferentOrder() {
+        List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
+        List<Short> list2 = new ArrayList<>(List.of((short) 2, (short) 1));
+        ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
+
+        assertTrue(listMatcher.deepMatches(list2));
+    }
+
+    @Test
+    public void shouldDeepMatchDifferentElementsDifferentClasses() {
+        List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2));
+        List<Short> list2 = new ArrayList<>(List.of((short) 2, (short) 3));
+        ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
+
+        assertFalse(listMatcher.deepMatches(list2));
+    }
+
+    @Test
     public void shouldDeepMatchSameElementsMultipleTimes() {
         List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2, 2, 3));
         List<Short> list2 = new ArrayList<>(List.of((short) 2, (short) 1, (short) 3, (short) 2));
@@ -104,16 +113,7 @@ public class ListAnyOrderTest extends TestBase {
     }
 
     @Test
-    public void shouldMatchWhenNull () {
-        List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2, 2, 3));
-        List<Integer> list2 = null;
-        ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
-
-        assertFalse(listMatcher.matches(list2));
-    }
-
-    @Test
-    public void shouldDeepMatchWhenNull () {
+    public void shouldDeepMatchWhenNull() {
         List<Integer> list1 = new ArrayList<>(Arrays.asList(1, 2, 2, 3));
         List<Integer> list2 = null;
         ListAnyOrder<Integer> listMatcher = new ListAnyOrder<>(list1);
@@ -121,13 +121,22 @@ public class ListAnyOrderTest extends TestBase {
         assertFalse(listMatcher.deepMatches(list2));
     }
 
-    @Test 
-    public void shouldReturnToString(){
-        List<Integer> list = new ArrayList<>(Arrays.asList(1,2,3));
+    @Test
+    public void shouldDeepMatchSameElementsDifferentClasses() {
+        List<String> list1 = new ArrayList<>(Arrays.asList("a", "b", "c"));
+        List<Character> list2 = new ArrayList<>(Arrays.asList('c', 'b', 'a'));
+        ListAnyOrder<String> listMatcher = new ListAnyOrder<>(list1);
+
+        assertTrue(listMatcher.deepMatches(list2));
+    }
+
+    @Test
+    public void shouldReturnToString() {
+        List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3));
         ListAnyOrder<Integer> listAnyOrderInteger = new ListAnyOrder<>(list);
         String expectedIntegerString = listAnyOrderInteger.toString();
 
-        List<String> listString = new ArrayList<>(Arrays.asList("1","2","3"));
+        List<String> listString = new ArrayList<>(Arrays.asList("1", "2", "3"));
         ListAnyOrder<String> listAnyOrderString = new ListAnyOrder<>(listString);
         String expectedStringString = listAnyOrderString.toString();
 
@@ -148,4 +157,5 @@ public class ListAnyOrderTest extends TestBase {
         assertTrue(expectedIntegerString.equals("null"));
         assertTrue(expectedStringString.equals("null"));
     }
+
 }
